# chronos-exchange

./: .dockerignore  .gitignore  Cargo.toml  README.md  markets_seed.json
.github/workflows/: ci.yml  fly-deploy.yml
data/: nba_okc_sample.json
deploy/: Dockerfile.web  README.md  docker-compose.yml  entrypoint.sh  fly.toml.example  nginx.conf  prometheus.yml
deploy/grafana/: dashboards.yml
deploy/grafana/dashboards/: chronos-exchange.json
docs/: APIs.md  Architecture.md  Assumptions.md  Benchmarks.md  Invariants.md  OrderFlow.md
engine/: Cargo.toml
engine/src/: hash.rs  lib.rs  orderbook.rs  snapshot.rs  types.rs  wal.rs
engine/tests/: integration.rs  props.rs
gateway/: Cargo.toml  Dockerfile
gateway/src/: dummy_seed.rs  ledger.rs  main.rs  metrics.rs
md/: Cargo.toml
md/src/: lib.rs
risk/: Cargo.toml
risk/src/: lib.rs
tmp/: chronos-fixes.patch
tools/: render_concepts_pdf.py  render_demo_walkthrough_pdf.py
tools/loadgen/: Cargo.toml
tools/loadgen/src/: main.rs
tools/replay_seeder/: Cargo.toml
tools/replay_seeder/src/: main.rs
tools/state_hash/: Cargo.toml
tools/state_hash/src/: main.rs
ui/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/public/: manifest.webmanifest
ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
ui/src/api/: queries.ts  types.ts
ui/src/components/: ActivityFeed.tsx  AppShell.tsx  DepthLadder.tsx  MarketCard.tsx  OpenOrdersPanel.tsx  OrderTicket.tsx  PortfolioPanel.tsx  RouteErrorFallback.tsx  Tape.tsx
ui/src/components/ui/: badge.tsx  button.tsx  sheet.tsx
ui/src/hooks/: useMarketWebSocket.ts  useUserId.ts
ui/src/lib/: formatVol.ts  wsUrl.ts
ui/src/pages/: MarketPage.tsx  MarketsPage.tsx
