
[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
zstd = "0.13"
blake3 = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
parking_lot = "0.12"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
prometheus = "0.13"
crossbeam-channel = "0.5"

[dev-dependencies]
proptest = "1"
rand = "0.8"
tempfile = "3"
